unpackaged/main/default/objects/conference360__Form__c/fields/conference360__Form_Pixel_Content__c.field-meta.xml
<CustomField>
    <fullName>conference360__Form_Pixel_Content__c</fullName>
    <description>Pixel code</description>
    <label>Form Pixel Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>