unpackaged/main/default/objects/conference360__Form__c/fields/conference360__Form_Pixel_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Form_Pixel_URL__c</fullName>
    <description>URL related to pixel tracking.</description>
    <label>Form Pixel URL</label>
    <type>Url</type>
</CustomField>