unpackaged/main/default/objects/conference360__Form__c/fields/conference360__Form_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Form_URL__c</fullName>
    <formula>BLANKVALUE($Setup.conference360__Blackthorn_Events_Settings__c.conference360__Platform_Domain__c, &#39;https://events.blackthorn.io&#39;) &amp; &#39;/&#39; &amp; $Organization.Id &amp; &#39;/s/&#39; &amp; conference360__Encrypted_ID__c</formula>
    <inlineHelpText>Public Url to this Form/Survey</inlineHelpText>
    <label>Form URL</label>
    <type>Text</type>
</CustomField>