unpackaged/main/default/objects/conference360__Form__c/fields/conference360__Submitted_Message__c.field-meta.xml
<CustomField>
    <fullName>conference360__Submitted_Message__c</fullName>
    <inlineHelpText>Include a personal message for the attendees you have invited to this event through AttendeeLink. There will already be a title above this message that says, &quot;Welcome [Attendee&#39;s First Name],&quot;</inlineHelpText>
    <label>Submitted Message</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>